Add docs, cleaning up and fixing animations

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -716,8 +716,25 @@
         *ngIf="chartType === 'box-plot'"
         class="chart-container"
         [view]="view"
-        [scheme]="colorScheme"
         [results]="boxData"
+        [scheme]="colorScheme"
+        [schemeType]="schemeType"
+        [customColors]="customColors"
+        [strokeColor]="strokeColor"
+        [strokeWidth]="strokeWidth"
+        [xAxis]="showXAxis"
+        [yAxis]="showYAxis"
+        [legend]="showLegend"
+        [legendTitle]="legendTitle"
+        [legendPosition]="legendPosition"
+        [showXAxisLabel]="showXAxisLabel"
+        [showYAxisLabel]="showYAxisLabel"
+        [tooltipDisabled]="tooltipDisabled"
+        [xAxisLabel]="xAxisLabel"
+        [yAxisLabel]="yAxisLabel"
+        [showGridLines]="showGridLines"
+        [roundDomains]="roundDomains"
+        [roundEdges]="roundEdges"
         [animations]="animations"
         (legendLabelClick)="onLegendLabelClick($event)"
         (select)="select($event)"
@@ -1149,7 +1166,7 @@
       </select>
 
       <h3>Theme</h3>
-      <select [ngModel]="theme" (ngModelChange)="theme = $event"
+      <select [ngModel]="theme" (ngModelChange)="changeTheme($event)"
         >>
         <option [value]="'dark'">Dark</option>
         <option [value]="'light'">Light</option>
@@ -1165,6 +1182,7 @@
         <pre *ngIf="chart.inputFormat === 'multiSeriesNegative' && !linearScale">{{ fiscalYearReport | json }}</pre>
         <pre *ngIf="chart.inputFormat === 'multiSeries' && linearScale && !range">{{ dateData | json }}</pre>
         <pre *ngIf="chart.inputFormat === 'multiSeries' && linearScale && range">{{ dateDataWithRange | json }}</pre>
+        <pre *ngIf="chart.inputFormat === 'boxMultiSeries'">{{ boxData | json }}</pre>
         <pre *ngIf="chart.inputFormat === 'bubble'">{{ bubble | json }}</pre>
         <pre *ngIf="chart.inputFormat === 'bubbleInteractive'">{{ bubbleDemoTempData | json }}</pre>
         <pre *ngIf="chart.inputFormat === 'comboChart'">{{ barChart | json }}</pre>
@@ -1307,7 +1325,15 @@
             <input type="checkbox" [checked]="noBarWhenZero" (change)="noBarWhenZero = $event.target.checked">
             Hide bar if value is 0
           </label> <br/>
-        </div>        
+        </div>
+        <div *ngIf="chart.options.includes('strokeColor')">
+          <label>Stroke Color:</label><br />
+          <input type="text" [(ngModel)]="strokeColor"/><br />
+        </div>
+        <div *ngIf="chart.options.includes('strokeWidth')">
+          <label>Stroke Width:</label><br />
+          <input type="number" [(ngModel)]="strokeWidth" max="10" min="0" step="1" /><br />
+        </div>
         <div *ngIf="chart.options.includes('showLegend')">
           <label>
             <input type="checkbox" [checked]="showLegend" (change)="showLegend = $event.target.checked" />
