Increase label size of doughnut center label

--- a/src/pie-chart/pie-chart.component.scss
+++ b/src/pie-chart/pie-chart.component.scss
@@ -15,6 +15,23 @@
   }
 }
 
+.doughnut-sum-label {
+  font-size: 16px;
+
+  &.animation {
+    animation: 750ms ease-in fadeIn;
+  
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+      }
+      to {
+        opacity: 1;
+      }
+    }
+  }
+}
+
 .pie-label-line {
   stroke-dasharray: 100%;
 
