--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1101,7 +1101,7 @@
     <h1>
       Ngx-<strong>Charts</strong>
       <small class="version">{{ APP_VERSION }}</small>
-      <small class="subtitle">Angular D3 Chart Framework</small>
+      <small class="subtitle">Angular Chart Framework</small>
     </h1>
     <div style="margin:20px">
       <h3>Chart Type</h3>
