--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1103,7 +1103,7 @@
       <small class="version">{{ APP_VERSION }}</small>
       <small class="subtitle">Angular Chart Framework</small>
     </h1>
-    <div style="margin:20px">
+    <div style="margin: 20px;">
       <h3>Chart Type</h3>
       <select [ngModel]="chartType" (ngModelChange)="selectChart($event)">
         <ng-template ngFor let-group [ngForOf]="chartGroups">
@@ -1119,7 +1119,7 @@
         <option [value]="'light'">Light</option>
       </select>
 
-      <h3 (click)="dataVisible = !dataVisible" style="cursor: pointer">
+      <h3 (click)="dataVisible = !dataVisible" style="cursor: pointer;">
         <span [class.arrow-down]="dataVisible" [class.arrow-right]="!dataVisible"> </span>
         <strong>Data</strong>
       </h3>
@@ -1148,7 +1148,7 @@
         </div>
       </div>
       <div>
-        <h3 (click)="dimVisible = !dimVisible" style="cursor: pointer">
+        <h3 (click)="dimVisible = !dimVisible" style="cursor: pointer;">
           <span [class.arrow-down]="dimVisible" [class.arrow-right]="!dimVisible"> </span>
           <strong>Dimensions</strong>
         </h3>
@@ -1167,7 +1167,7 @@
           </div>
         </div>
       </div>
-      <h3 (click)="colorVisible = !colorVisible" style="cursor: pointer">
+      <h3 (click)="colorVisible = !colorVisible" style="cursor: pointer;">
         <span [class.arrow-down]="colorVisible" [class.arrow-right]="!colorVisible"> </span>
         <strong>Color Scheme</strong>
       </h3>
@@ -1198,7 +1198,7 @@
         </div>
       </div>
 
-      <h3 (click)="optsVisible = !optsVisible" style="cursor: pointer">
+      <h3 (click)="optsVisible = !optsVisible" style="cursor: pointer;">
         <span [class.arrow-down]="optsVisible" [class.arrow-right]="!optsVisible"> </span>
         <strong>Options</strong>
       </h3>
