--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -306,6 +306,8 @@
         [labels]="showLabels"
         [doughnut]="doughnut"
         [arcWidth]="arcWidth"
+        [sliceBorderWidth]="4"
+        [sliceBorderColor]="'white'"
         (legendLabelClick)="onLegendLabelClick($event)"
         [gradient]="gradient"
         [tooltipDisabled]="tooltipDisabled"
@@ -328,6 +330,8 @@
         [gradient]="gradient"
         [tooltipDisabled]="tooltipDisabled"
         [tooltipText]="pieTooltipText"
+        [sliceBorderWidth]="sliceBorderWidth"
+        [sliceBorderColor]="sliceBorderColor"
         (select)="select($event)"
         (activate)="activate($event)"
         (deactivate)="deactivate($event)"
@@ -1316,6 +1320,20 @@
           <label>
             <input type="checkbox" [checked]="showText" (change)="showText = $event.target.checked" />
             Show Text
+          </label>
+          <br />
+        </div>
+        <div *ngIf="chart.options.includes('sliceBorders')">
+          <label>
+            <input type="text" [(ngModel)]="sliceBorderColor" />
+            Sliced Borders Color
+          </label>
+          <br />
+        </div>
+        <div *ngIf="chart.options.includes('sliceBorders')">
+          <label>
+            <input type="number" [(ngModel)]="sliceBorderWidth" />
+            Sliced Borders Width
           </label>
           <br />
         </div>
