Make border width and color dynamic in demos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -306,8 +306,8 @@
         [labels]="showLabels"
         [doughnut]="doughnut"
         [arcWidth]="arcWidth"
-        [sliceBorderWidth]="4"
-        [sliceBorderColor]="'white'"
+        [sliceBorderWidth]="sliceBorderWidth"
+        [sliceBorderColor]="sliceBorderColor"
         (legendLabelClick)="onLegendLabelClick($event)"
         [gradient]="gradient"
         [tooltipDisabled]="tooltipDisabled"
