Add pie chart option for slice border and fix labels

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1325,15 +1325,15 @@
         </div>
         <div *ngIf="chart.options.includes('sliceBorders')">
           <label>
+            <label>Slices Border Color:</label><br />
             <input type="text" [(ngModel)]="sliceBorderColor" />
-            Sliced Borders Color
           </label>
           <br />
         </div>
         <div *ngIf="chart.options.includes('sliceBorders')">
           <label>
+            <label>Slices Border Width:</label><br />
             <input type="number" [(ngModel)]="sliceBorderWidth" />
-            Sliced Borders Width
           </label>
           <br />
         </div>
