Add feature to explode slices on hover

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -303,6 +303,7 @@
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
         [explodeSlices]="explodeSlices"
+        [explodeOnHover]="explodeOnHover"
         [labels]="showLabels"
         [doughnut]="doughnut"
         [arcWidth]="arcWidth"
@@ -1403,6 +1404,13 @@
           <label>
             <input type="checkbox" [checked]="explodeSlices" (change)="explodeSlices = $event.target.checked" />
             Explode Slices
+          </label>
+          <br />
+        </div>
+        <div *ngIf="chart.options.includes('explodeOnHover') && !doughnut">
+          <label>
+            <input type="checkbox" [checked]="explodeOnHover" (change)="explodeOnHover = $event.target.checked" />
+            Explode on Hover
           </label>
           <br />
         </div>
