Enable explode on hover with doghnuts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1389,7 +1389,7 @@
           </label>
           <br />
         </div>
-        <div *ngIf="chart.options.includes('explodeOnHover') && !doughnut">
+        <div *ngIf="chart.options.includes('explodeOnHover')">
           <label>
             <input type="checkbox" [checked]="explodeOnHover" (change)="explodeOnHover = $event.target.checked" />
             Explode on Hover
