Force chart drawing to stay ltr in RTL html

--- a/projects/swimlane/ngx-charts/src/lib/common/base-chart.component.scss
+++ b/projects/swimlane/ngx-charts/src/lib/common/base-chart.component.scss
@@ -2,6 +2,10 @@
   float: left;
   overflow: visible;
 
+  [dir='rtl'] & {
+    direction: ltr;
+  }
+
   .circle,
   .bar,
   .arc {
@@ -110,5 +114,11 @@
         fill: rgba(0, 0, 0, 0.05);
       }
     }
+  }
+}
+
+.ngx-charts-outer {
+  [dir='rtl'] .advanced-pie & {
+    width: inherit !important;
   }
 }
