--- a/projects/swimlane/ngx-charts/src/lib/common/legend/advanced-legend.component.scss
+++ b/projects/swimlane/ngx-charts/src/lib/common/legend/advanced-legend.component.scss
@@ -1,8 +1,13 @@
 .advanced-pie-legend {
   float: left;
   position: relative;
+
   top: 50%;
   transform: translate(0, -50%);
+  [dir='rtl'] & {
+    text-align: right;
+    float: right;
+  }
 
   .total-value {
     font-size: 36px;
@@ -24,6 +29,10 @@
         margin-right: 20px;
         display: inline-block;
         cursor: pointer;
+        [dir='rtl'] & {
+          margin-left: 20px;
+          margin-right: 0px;
+        }
 
         &:focus {
           outline: none;
@@ -40,12 +49,22 @@
           font-size: 24px;
           margin-top: -6px;
           margin-left: 11px;
+
+          [dir='rtl'] & {
+            margin-right: 11px;
+            margin-left: 0px;
+          }
         }
 
         .item-label {
           font-size: 14px;
           opacity: 0.7;
           margin-left: 11px;
+
+          [dir='rtl'] & {
+            margin-right: 11px;
+            margin-left: 0px;
+          }
           margin-top: -6px;
         }
 
@@ -53,6 +72,10 @@
           font-size: 24px;
           opacity: 0.7;
           margin-left: 11px;
+          [dir='rtl'] & {
+            margin-right: 11px;
+            margin-left: 0px;
+          }
         }
 
         .item-color {
@@ -61,6 +84,11 @@
           height: 42px;
           float: left;
           margin-right: 7px;
+          [dir='rtl'] & {
+            float: right;
+            margin-left: 7px;
+            margin-right: 0px;
+          }
         }
       }
     }
