--- a/projects/swimlane/ngx-charts/src/lib/common/legend/legend.component.scss
+++ b/projects/swimlane/ngx-charts/src/lib/common/legend/legend.component.scss
@@ -10,6 +10,10 @@
     margin-bottom: 5px;
     font-size: 14px;
     font-weight: bold;
+    [dir='rtl'] & {
+      margin-left: 0px;
+      margin-right: 10px;
+    }
   }
 
   ul,
@@ -40,6 +44,10 @@
     overflow-x: hidden;
     white-space: nowrap;
     background: rgba(0, 0, 0, 0.05);
+    [dir='rtl'] & {
+      float: right;
+      text-align: right;
+    }
   }
 
   .legend-label {
