--- a/projects/swimlane/ngx-charts/src/lib/common/legend/legend.component.scss
+++ b/projects/swimlane/ngx-charts/src/lib/common/legend/legend.component.scss
@@ -10,8 +10,9 @@
     margin-bottom: 5px;
     font-size: 14px;
     font-weight: bold;
+
     [dir='rtl'] & {
-      margin-left: 0px;
+      margin-left: inherit;
       margin-right: 10px;
     }
   }
@@ -44,6 +45,7 @@
     overflow-x: hidden;
     white-space: nowrap;
     background: rgba(0, 0, 0, 0.05);
+
     [dir='rtl'] & {
       float: right;
       text-align: right;
