--- a/projects/swimlane/ngx-charts/src/lib/common/legend/scale-legend.component.scss
+++ b/projects/swimlane/ngx-charts/src/lib/common/legend/scale-legend.component.scss
@@ -24,6 +24,8 @@
   .horizontal-legend {
     &.scale-legend {
       flex-direction: row;
+      margin-left: 0px;
+      padding: 0 10px;
     }
 
     .scale-legend-wrap {
