--- a/projects/swimlane/ngx-charts/src/lib/common/legend/legend.component.scss
+++ b/projects/swimlane/ngx-charts/src/lib/common/legend/legend.component.scss
@@ -40,6 +40,11 @@
     overflow-x: auto;
     overflow-y: hidden;
     margin-left: 10px;
+
+    &.legend-labels {
+      width: calc(100% - 10px);
+    }
+
     li {
       display: inline-block;
     }
