Support showing axis whie hiding grid lines

--- a/src/app/custom-charts/combo-chart/combo-chart.component.html
+++ b/src/app/custom-charts/combo-chart/combo-chart.component.html
@@ -26,6 +26,7 @@
       [dims]="dims"
       [yOrient]="yOrientLeft"
       [showGridLines]="showGridLines"
+      [showAxis]="yAxis"
       [showLabel]="showYAxisLabel"
       [labelText]="yAxisLabel"
       [tickFormatting]="yAxisTickFormatting"
@@ -38,6 +39,7 @@
       [dims]="dims"
       [yOrient]="yOrientRight"
       [showGridLines]="showGridLines"
+      [showAxis]="yAxis"
       [showLabel]="showRightYAxisLabel"
       [labelText]="yAxisLabelRight"
       [tickFormatting]="yRightAxisTickFormatting"
