If yScale attribute is using, it sets the right and left maxima with respect to yScale attribute. If not defined, the left and right scales are adjusted according to their maximum value.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -598,6 +598,7 @@
         [yAxisLabelRight]="yAxisLabelRight"
         [noBarWhenZero]="noBarWhenZero"
         (select)="onSelect($event)"
+        [yScaleMax]="yScaleMaxCombo"
       >
       </combo-chart-component>
       <ngx-charts-heat-map
