Forward timeline selection
Forward the selected domain of the timeline of line, area, stacked area and normalized chart.
Output property "timelineSelectionChanged" is defined in BaseChartComponent.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -386,6 +386,7 @@
         (select)="select($event)"
         (activate)="activate($event)"
         (deactivate)="deactivate($event)"
+        (timelineSelectionChanged)="onTimelineSelectionChange($event)"
       >
       </ngx-charts-line-chart>
       <ngx-charts-polar-chart
@@ -495,6 +496,7 @@
         (select)="select($event)"
         (activate)="activate($event)"
         (deactivate)="deactivate($event)"
+        (timelineSelectionChanged)="onTimelineSelectionChange($event)"
       >
       </ngx-charts-area-chart>
       <ngx-charts-area-chart-stacked
@@ -533,6 +535,7 @@
         (select)="select($event)"
         (activate)="activate($event)"
         (deactivate)="deactivate($event)"
+        (timelineSelectionChanged)="onTimelineSelectionChange($event)"
       >
       </ngx-charts-area-chart-stacked>
       <ngx-charts-area-chart-normalized
@@ -567,6 +570,7 @@
         (select)="select($event)"
         (activate)="activate($event)"
         (deactivate)="deactivate($event)"
+        (timelineSelectionChanged)="onTimelineSelectionChange($event)"
       >
       </ngx-charts-area-chart-normalized>
       <combo-chart-component
