fix animation... mostly

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -689,6 +689,7 @@
         [showGridLines]="showGridLines"
         [roundDomains]="roundDomains"
         [roundEdges]="roundEdges"
+        [gradient]="gradient"
         [animations]="animations"
         (legendLabelClick)="onLegendLabelClick($event)"
         (select)="select($event)"
