fix issue with prettier

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <main [class]="theme">
   <div class="chart-col" [attr.dir]="dir">
-    <div style="position: absolute; top: 50px; left: 50px; right: 50px; bottom: 50px;">
+    <div style="position: absolute; top: 50px; left: 50px; right: 50px; bottom: 50px">
       <ngx-charts-bar-vertical
         *ngIf="chartType === 'bar-vertical'"
         class="chart-container"
