--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -178,6 +178,7 @@
         [rotateXAxisTicks]="rotateXAxisTicks"
         [maxXAxisTickLength]="maxXAxisTickLength"
         [maxYAxisTickLength]="maxYAxisTickLength"
+        [roundEdges]="roundEdges"
         (select)="select($event)"
         (activate)="activate($event)"
         (deactivate)="deactivate($event)"
@@ -213,6 +214,7 @@
         [rotateXAxisTicks]="rotateXAxisTicks"
         [maxXAxisTickLength]="maxXAxisTickLength"
         [maxYAxisTickLength]="maxYAxisTickLength"
+        [roundEdges]="roundEdges"
         (select)="select($event)"
         (activate)="activate($event)"
         (deactivate)="deactivate($event)"
