feat(BaseChartComponent): Added the ability to control fadeIn animation
introduced a new @Input fadeInAnimation.
couldn't use the already there animation input to control the fadeIn class as I concluded that a lot of people will want that slight fadeIn but in the other hand a lot of people will want to get rid of it.

Closes #1776

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
         [customColors]="customColors"
         [results]="single"
         [animations]="animations"
+        [fadeInAnimation]="fadeInAnimation"
         [gradient]="gradient"
         [xAxis]="showXAxis"
         [yAxis]="showYAxis"
@@ -46,6 +47,7 @@
         [schemeType]="schemeType"
         [results]="single"
         [animations]="animations"
+        [fadeInAnimation]="fadeInAnimation"
         [gradient]="gradient"
         [xAxis]="showXAxis"
         [yAxis]="showYAxis"
@@ -82,6 +84,7 @@
         [schemeType]="schemeType"
         [results]="multi"
         [animations]="animations"
+        [fadeInAnimation]="fadeInAnimation"
         [gradient]="gradient"
         [xAxis]="showXAxis"
         [yAxis]="showYAxis"
@@ -119,6 +122,7 @@
         [schemeType]="schemeType"
         [results]="multi"
         [animations]="animations"
+        [fadeInAnimation]="fadeInAnimation"
         [gradient]="gradient"
         [tooltipDisabled]="tooltipDisabled"
         [xAxis]="showXAxis"
@@ -156,6 +160,7 @@
         [schemeType]="schemeType"
         [results]="multi"
         [animations]="animations"
+        [fadeInAnimation]="fadeInAnimation"
         [gradient]="gradient"
         [tooltipDisabled]="tooltipDisabled"
         [xAxis]="showXAxis"
@@ -191,6 +196,7 @@
         [schemeType]="schemeType"
         [results]="multi"
         [animations]="animations"
+        [fadeInAnimation]="fadeInAnimation"
         [gradient]="gradient"
         [tooltipDisabled]="tooltipDisabled"
         [xAxis]="showXAxis"
@@ -226,6 +232,7 @@
         [schemeType]="schemeType"
         [results]="multi"
         [animations]="animations"
+        [fadeInAnimation]="fadeInAnimation"
         [gradient]="gradient"
         [tooltipDisabled]="tooltipDisabled"
         [xAxis]="showXAxis"
@@ -259,6 +266,7 @@
         [schemeType]="schemeType"
         [results]="multi"
         [animations]="animations"
+        [fadeInAnimation]="fadeInAnimation"
         [gradient]="gradient"
         [tooltipDisabled]="tooltipDisabled"
         [xAxis]="showXAxis"
@@ -291,6 +299,7 @@
         [scheme]="colorScheme"
         [results]="single"
         [animations]="animations"
+        [fadeInAnimation]="fadeInAnimation"
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
@@ -315,6 +324,7 @@
         [results]="single"
         [valueFormatting]="valueFormatting"
         [animations]="animations"
+        [fadeInAnimation]="fadeInAnimation"
         [gradient]="gradient"
         [tooltipDisabled]="tooltipDisabled"
         [tooltipText]="pieTooltipText"
@@ -330,6 +340,7 @@
         [scheme]="colorScheme"
         [results]="single"
         [animations]="animations"
+        [fadeInAnimation]="fadeInAnimation"
         [tooltipDisabled]="tooltipDisabled"
         [tooltipText]="pieTooltipText"
         (select)="select($event)"
@@ -345,6 +356,7 @@
         [schemeType]="schemeType"
         [results]="dateDataWithOrWithoutRange"
         [animations]="animations"
+        [fadeInAnimation]="fadeInAnimation"
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
@@ -384,6 +396,7 @@
         [schemeType]="schemeType"
         [results]="multi"
         [animations]="animations"
+        [fadeInAnimation]="fadeInAnimation"
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
@@ -414,6 +427,7 @@
         class="chart-container"
         [results]="bubble"
         [animations]="animations"
+        [fadeInAnimation]="fadeInAnimation"
         [showGridLines]="showGridLines"
         [legend]="showLegend"
         [legendTitle]="legendTitle"
@@ -453,6 +467,7 @@
         [schemeType]="schemeType"
         [results]="dateData"
         [animations]="animations"
+        [fadeInAnimation]="fadeInAnimation"
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
@@ -491,6 +506,7 @@
         [schemeType]="schemeType"
         [results]="dateData"
         [animations]="animations"
+        [fadeInAnimation]="fadeInAnimation"
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
@@ -528,6 +544,7 @@
         [schemeType]="schemeType"
         [results]="dateData"
         [animations]="animations"
+        [fadeInAnimation]="fadeInAnimation"
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
@@ -561,6 +578,7 @@
         [colorSchemeLine]="lineChartScheme"
         [results]="barChart"
         [animations]="animations"
+        [fadeInAnimation]="fadeInAnimation"
         [lineChart]="lineChartSeries"
         [tooltipDisabled]="tooltipDisabled"
         [yAxisTickFormatting]="yLeftTickFormat"
@@ -593,6 +611,7 @@
         [scheme]="colorScheme"
         [results]="multi"
         [animations]="animations"
+        [fadeInAnimation]="fadeInAnimation"
         [legend]="showLegend"
         [gradient]="gradient"
         [xAxis]="showXAxis"
@@ -620,6 +639,7 @@
         [scheme]="colorScheme"
         [results]="calendarData"
         [animations]="animations"
+        [fadeInAnimation]="fadeInAnimation"
         [legend]="showLegend"
         [gradient]="gradient"
         [xAxis]="showXAxis"
@@ -647,6 +667,7 @@
         [scheme]="colorScheme"
         [results]="single"
         [animations]="animations"
+        [fadeInAnimation]="fadeInAnimation"
         [tooltipDisabled]="tooltipDisabled"
         [labelFormatting]="gdpLabelFormatting"
         [valueFormatting]="currencyFormatting"
@@ -663,6 +684,7 @@
         emptyColor="#1e222e"
         [results]="single"
         [animations]="animations"
+        [fadeInAnimation]="fadeInAnimation"
         (select)="select($event)"
       >
       </ngx-charts-number-card>
@@ -691,6 +713,7 @@
         [roundEdges]="roundEdges"
         [gradient]="gradient"
         [animations]="animations"
+        [fadeInAnimation]="fadeInAnimation"
         (legendLabelClick)="onLegendLabelClick($event)"
         (select)="select($event)"
         (activate)="activate($event)"
@@ -727,6 +750,7 @@
           emptyColor="#1e222e"
           [results]="statusData"
           [animations]="animations"
+          [fadeInAnimation]="fadeInAnimation"
           [valueFormatting]="statusValueFormat"
           [labelFormatting]="statusLabelFormat"
         >
@@ -741,6 +765,7 @@
         [legendPosition]="legendPosition"
         [results]="single"
         [animations]="animations"
+        [fadeInAnimation]="fadeInAnimation"
         [textValue]="gaugeTextValue"
         [scheme]="colorScheme"
         [min]="gaugeMin"
@@ -765,6 +790,7 @@
         [view]="view"
         [scheme]="colorScheme"
         [animations]="animations"
+        [fadeInAnimation]="fadeInAnimation"
         [min]="gaugeMin"
         [max]="gaugeMax"
         [value]="gaugeValue"
@@ -789,6 +815,7 @@
           [schemeType]="schemeType"
           [results]="plotData"
           [animations]="animations"
+          [fadeInAnimation]="fadeInAnimation"
           [legend]="false"
           [legendTitle]="legendTitle"
           [legendPosition]="legendPosition"
@@ -822,6 +849,7 @@
           [schemeType]="schemeType"
           [results]="plotData"
           [animations]="animations"
+          [fadeInAnimation]="fadeInAnimation"
           [legend]="false"
           [legendTitle]="legendTitle"
           [legendPosition]="legendPosition"
@@ -869,6 +897,7 @@
           [scheme]="colorScheme"
           [results]="treemap"
           [animations]="animations"
+          [fadeInAnimation]="fadeInAnimation"
           [tooltipDisabled]="tooltipDisabled"
           [gradient]="gradient"
           (select)="treemapSelect($event)"
@@ -895,6 +924,7 @@
           [view]="view"
           [results]="bubbleDemoTempData"
           [animations]="animations"
+          [fadeInAnimation]="fadeInAnimation"
           [showGridLines]="showGridLines"
           [legend]="showLegend"
           [legendTitle]="legendTitle"
@@ -923,6 +953,7 @@
         [schemeType]="schemeType"
         [results]="multi"
         [animations]="animations"
+        [fadeInAnimation]="fadeInAnimation"
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
@@ -961,6 +992,7 @@
         [customColors]="customColors"
         [results]="single"
         [animations]="animations"
+        [fadeInAnimation]="fadeInAnimation"
         [gradient]="gradient"
         [xAxis]="showXAxis"
         [yAxis]="showYAxis"
@@ -997,6 +1029,7 @@
         [scheme]="'flame'"
         [results]="sparklineData"
         [animations]="animations"
+        [fadeInAnimation]="fadeInAnimation"
         [curve]="curve"
       >
       </ngx-charts-sparkline>
@@ -1008,6 +1041,7 @@
         [schemeType]="schemeType"
         [results]="timelineFilterBarData"
         [animations]="animations"
+        [fadeInAnimation]="fadeInAnimation"
         [gradient]="gradient"
         [xAxis]="showXAxis"
         [yAxis]="showYAxis"
@@ -1029,6 +1063,7 @@
       [schemeType]="schemeType"
       [results]="fiscalYearReport"
       [animations]="animations"
+      [fadeInAnimation]="fadeInAnimation"
       [gradient]="gradient"
       [tooltipDisabled]="tooltipDisabled"
       [xAxis]="showXAxis"
@@ -1063,6 +1098,7 @@
       [schemeType]="schemeType"
       [results]="fiscalYearReport"
       [animations]="animations"
+      [fadeInAnimation]="fadeInAnimation"
       [gradient]="gradient"
       [tooltipDisabled]="tooltipDisabled"
       [xAxis]="showXAxis"
@@ -1201,6 +1237,13 @@
           <label>
             <input type="checkbox" [(ngModel)]="animations" />
             Animations
+          </label>
+          <br />
+        </div>
+        <div *ngIf="chart.options.includes('fadeInAnimation')">
+          <label>
+            <input type="checkbox" [(ngModel)]="fadeInAnimation" />
+            FadeIn Animation
           </label>
           <br />
         </div>
