--- a/src/app/custom-charts/combo-chart/combo-chart.component.html
+++ b/src/app/custom-charts/combo-chart/combo-chart.component.html
@@ -4,6 +4,7 @@
   [legendOptions]="legendOptions"
   [activeEntries]="activeEntries"
   [animations]="animations"
+  [fadeInAnimation]="fadeInAnimation"
   (legendLabelClick)="onClick($event)"
   (legendLabelActivate)="onActivate($event)"
   (legendLabelDeactivate)="onDeactivate($event)"
