started creating top-level typing for all charts; stopped modifying the results input and created finalResults

--- a/src/app/custom-charts/combo-chart/combo-chart.component.html
+++ b/src/app/custom-charts/combo-chart/combo-chart.component.html
@@ -48,7 +48,7 @@
       [xScale]="xScale"
       [yScale]="yScale"
       [colors]="colors"
-      [series]="results"
+      [series]="finalResults"
       [seriesLine]="lineChart"
       [dims]="dims"
       [gradient]="gradient"
