Allow customization of reference line
1. Change color (default #455066)
2. Change width (default 1)
3. Change style (default dashed)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -958,6 +958,9 @@
         [showRefLines]="showRefLines"
         [showRefLabels]="showRefLabels"
         [referenceLines]="refLines"
+        [refLineColor]="refLineColor"
+        [refLineWidth]="refLineWidth"
+        [refLineStyle]="refLineStyle"
         [trimXAxisTicks]="trimXAxisTicks"
         [trimYAxisTicks]="trimYAxisTicks"
         [maxXAxisTickLength]="maxXAxisTickLength"
@@ -1239,6 +1242,18 @@
             Show Reference Lines
           </label>
           <br />
+        </div>
+        <div *ngIf="chart.options.includes('refLineColor')">
+          <label>Reference Line Color:</label><br />
+          <input type="text" [(ngModel)]="refLineColor" /><br />
+        </div>
+        <div *ngIf="chart.options.includes('refLineWidth')">
+          <label>Reference Line Width:</label><br />
+          <input type="number" [(ngModel)]="refLineWidth" max="10" min="0" step="1" /><br />
+        </div>
+        <div *ngIf="chart.options.includes('refLineStyle')">
+          <label>Reference Line Style:</label><br />
+          <input type="text" [(ngModel)]="refLineStyle" /><br /><br />
         </div>
         <div *ngIf="chart.options.includes('showYAxis')">
           <label>
