--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,9 @@
         [showXAxisLabel]="showXAxisLabel"
         [showYAxisLabel]="showYAxisLabel"
         [tooltipDisabled]="tooltipDisabled"
+        [referenceLines]="refLines"
+        [showRefLines]="showRefLines"
+        [showRefLabels]="showRefLabels"
         [xAxisLabel]="xAxisLabel"
         [yAxisLabel]="yAxisLabel"
         [showGridLines]="showGridLines"
@@ -56,6 +59,9 @@
         [showXAxisLabel]="showXAxisLabel"
         [showYAxisLabel]="showYAxisLabel"
         [tooltipDisabled]="tooltipDisabled"
+        [referenceLines]="refLines"
+        [showRefLines]="showRefLines"
+        [showRefLabels]="showRefLabels"
         [xAxisLabel]="xAxisLabel"
         [yAxisLabel]="yAxisLabel"
         [showGridLines]="showGridLines"
@@ -482,7 +488,9 @@
         [showGridLines]="showGridLines"
         [roundDomains]="roundDomains"
         [curve]="curve"
-        [tooltipDisabled]="tooltipDisabled"
+        [tooltipDisabled]="tooltipDisabled"        [referenceLines]="refLinesArea"
+        [showRefLines]="showRefLines"
+        [showRefLabels]="showRefLabels"
         [trimXAxisTicks]="trimXAxisTicks"
         [trimYAxisTicks]="trimYAxisTicks"
         [rotateXAxisTicks]="rotateXAxisTicks"
