Add New River Area Chart Type
New River Area Chart. Data is stacked similar to Stacked Area Chart and aligned so that it is symmetric horizontally.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -565,6 +565,39 @@
         (deactivate)="deactivate($event)"
       >
       </ngx-charts-area-chart-normalized>
+      <ngx-charts-area-chart-river
+        *ngIf="chartType === 'area-chart-river'"
+        class="chart-container"
+        [view]="view"
+        [scheme]="colorScheme"
+        [schemeType]="schemeType"
+        [results]="dateData"
+        [animations]="animations"
+        [legend]="showLegend"
+        [legendTitle]="legendTitle"
+        [legendPosition]="legendPosition"
+        [gradient]="gradient"
+        [xAxis]="showXAxis"
+        [yAxis]="showYAxis"
+        [showXAxisLabel]="showXAxisLabel"
+        [showYAxisLabel]="showYAxisLabel"
+        [xAxisLabel]="xAxisLabel"
+        [yAxisLabel]="yAxisLabel"
+        [timeline]="timeline"
+        [showGridLines]="showGridLines"
+        [roundDomains]="roundDomains"
+        [tooltipDisabled]="tooltipDisabled"
+        [curve]="curve"
+        [trimXAxisTicks]="trimXAxisTicks"
+        [trimYAxisTicks]="trimYAxisTicks"
+        [rotateXAxisTicks]="rotateXAxisTicks"
+        [maxXAxisTickLength]="maxXAxisTickLength"
+        [maxYAxisTickLength]="maxYAxisTickLength"
+        (select)="select($event)"
+        (activate)="activate($event)"
+        (deactivate)="deactivate($event)"
+      >
+      </ngx-charts-area-chart-river>
       <combo-chart-component
         *ngIf="chartType === 'combo-chart'"
         class="chart-container"
