Timeline Panning for Vertical Bar Charts
Allows panning for vertical bar chart, vertical stacked bar chart, vertical normalized bar chart and vertical grouped bar chart. Timeline panning can be used for all data types on x axis.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,6 +34,7 @@
         [maxXAxisTickLength]="maxXAxisTickLength"
         [maxYAxisTickLength]="maxYAxisTickLength"
         [wrapTicks]="wrapTicks"
+        [timeline]="timeline"
         (select)="select($event)"
         (activate)="activate($event)"
         (deactivate)="deactivate($event)"
@@ -109,6 +110,7 @@
         [maxXAxisTickLength]="maxXAxisTickLength"
         [maxYAxisTickLength]="maxYAxisTickLength"
         [wrapTicks]="wrapTicks"
+        [timeline]="timeline"
         (select)="select($event)"
         (activate)="activate($event)"
         (deactivate)="deactivate($event)"
@@ -183,6 +185,7 @@
         [maxXAxisTickLength]="maxXAxisTickLength"
         [maxYAxisTickLength]="maxYAxisTickLength"
         [wrapTicks]="wrapTicks"
+        [timeline]="timeline"
         (select)="select($event)"
         (activate)="activate($event)"
         (deactivate)="deactivate($event)"
@@ -253,6 +256,7 @@
         [maxXAxisTickLength]="maxXAxisTickLength"
         [maxYAxisTickLength]="maxYAxisTickLength"
         [wrapTicks]="wrapTicks"
+        [timeline]="timeline"
         (select)="select($event)"
         (activate)="activate($event)"
         (deactivate)="deactivate($event)"
