Display total inside pie chart
Displays total inside pie chart when display type is doughnut.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -297,7 +297,7 @@
         class="chart-container"
         [view]="view"
         [scheme]="colorScheme"
-        [results]="single"
+        [results]="customData"
         [animations]="animations"
         [legend]="showLegend"
         [legendTitle]="legendTitle"
@@ -336,7 +336,7 @@
         class="chart-container"
         [view]="view"
         [scheme]="colorScheme"
-        [results]="single"
+        [results]="customData"
         [animations]="animations"
         [tooltipDisabled]="tooltipDisabled"
         [tooltipText]="pieTooltipText"
