Add options and customization to total displayed
Added option and customization to total displayed in pie chart, including font size and display text.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -297,7 +297,7 @@
         class="chart-container"
         [view]="view"
         [scheme]="colorScheme"
-        [results]="customData"
+        [results]="single"
         [animations]="animations"
         [legend]="showLegend"
         [legendTitle]="legendTitle"
@@ -309,6 +309,9 @@
         [gradient]="gradient"
         [tooltipDisabled]="tooltipDisabled"
         [tooltipText]="pieTooltipText"
+        [displayTotal]="displayTotal"
+        [totalFontSize]="totalFontSize"
+        [totalDisplayText]="totalDisplayText"
         (dblclick)="dblclick($event)"
         (select)="select($event)"
         (activate)="activate($event)"
@@ -336,7 +339,7 @@
         class="chart-container"
         [view]="view"
         [scheme]="colorScheme"
-        [results]="customData"
+        [results]="single"
         [animations]="animations"
         [tooltipDisabled]="tooltipDisabled"
         [tooltipText]="pieTooltipText"
@@ -1400,6 +1403,25 @@
             Doughnut
           </label>
           <br />
+        </div>
+        <div *ngIf="doughnut && chart.options.includes('displayTotal')">
+          <label>
+            <input type="checkbox" [(ngModel)]="displayTotal" />
+            Display Total
+          </label>
+          <br />
+        </div>
+        <div *ngIf="doughnut && chart.options.includes('totalFontSize')">
+          <label>
+            <label>Total Font Size (px):</label><br />
+            <input type="number" [disabled]="!doughnut" [(ngModel)]="totalFontSize" min="0" step="1" /><br />
+          </label>
+        </div>
+        <div *ngIf="doughnut && chart.options.includes('totalDisplayText')">
+          <label>
+            <label>Total Display Text:</label><br />
+            <input type="text" [(ngModel)]="totalDisplayText" /><br />
+          </label>
         </div>
         <div *ngIf="chart.options.includes('arcWidth') && doughnut">
           <label>Arc width (fraction of radius):</label><br />
